--- a/fine_tuning_BERT.ipynb
+++ b/fine_tuning_BERT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNvI042LswGv2qC+PkspuIa",
+      "authorship_tag": "ABX9TyPyPkAulrhbnfPXArCXO3s/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7557,6 +7557,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Importing Helper function"
+      ],
+      "metadata": {
+        "id": "v3P9GL4EMSDh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         " !wget https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py"
@@ -7568,7 +7577,7 @@
         "id": "Zkqb94hiqy05",
         "outputId": "f189c4e2-a37d-43d6-d44b-a2d9652913f6"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7599,7 +7608,7 @@
       "metadata": {
         "id": "kmVhUf57qy7-"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7626,7 +7635,7 @@
         "id": "EQJT__HOthc1",
         "outputId": "d59526ab-9226-4e66-d407-18a741d0a4d5"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7820,7 +7829,7 @@
         "id": "euPdnxhYtp0A",
         "outputId": "dc248046-e155-4562-862e-a835ab10ed3d"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7866,8 +7875,17 @@
       "metadata": {
         "id": "az3U2Ilf_gii"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* Creating the testing and training  and validation files in it. In order to create the validation file we have splitted the testing file and created a 20% subset of it in order to create the validation file."
+      ],
+      "metadata": {
+        "id": "a3MGg9bO6JEx"
+      }
     },
     {
       "cell_type": "code",
@@ -7883,7 +7901,7 @@
       "metadata": {
         "id": "t7qw2p3h_aut"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7904,7 +7922,7 @@
       "metadata": {
         "id": "pxBBjDttLBws"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7928,7 +7946,7 @@
         "id": "4oInUqsFMFdr",
         "outputId": "5b3e209a-15a8-46af-9783-f84f16601676"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7989,6 +8007,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* When the file is created in the form of the dataloaders , the best way is to create a dictionary of the dataset , we have use the functio called as the load_dataset function which creates the dictionary of the data which contains the data splits and the associated features with the dataset."
+      ],
+      "metadata": {
+        "id": "Zym6z8gy6cUW"
+      }
     },
     {
       "cell_type": "code",
@@ -8083,7 +8110,7 @@
         "id": "oINJy2fXLqw9",
         "outputId": "dd3d9c07-6188-4665-8188-835419f69c49"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8186,6 +8213,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "* so basically our dataset is stored in the form of the dictionary with a key as the features and rest of the columns as the value."
+      ],
+      "metadata": {
+        "id": "ROdoI71U7Vdl"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "train_dataset"
@@ -8197,7 +8233,7 @@
         "id": "P6ZkrxACMNf5",
         "outputId": "fe073819-aabe-4487-ccd4-74141dc5ea4b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8226,7 +8262,7 @@
         "id": "3Q7el03MMR0S",
         "outputId": "e26a4584-3388-4454-d3a1-d56f2bace0b2"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8255,7 +8291,7 @@
         "id": "XXL42uyNMUct",
         "outputId": "5978ba8d-699d-4a69-e41a-f856db45a12f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8271,6 +8307,15 @@
           "execution_count": 12
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* In the code snippet you provided, the AutoTokenizer.from_pretrained(\"distilbert-base-uncased\") line creates an instance of the AutoTokenizer class and loads the tokenizer for the \"distilbert-base-uncased\" model. The tokenizer is responsible for converting raw text into numerical representations that can be understood by the model."
+      ],
+      "metadata": {
+        "id": "qPVovSrr75YL"
+      }
     },
     {
       "cell_type": "code",
@@ -8335,7 +8380,7 @@
         "id": "GQttTg7cTqz-",
         "outputId": "595ae6e5-a78e-41b3-f0a4-8dd6e10c3730"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8404,6 +8449,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "* here the target variable is tokenized with the added function of the padding and trucation."
+      ],
+      "metadata": {
+        "id": "uyMyZWft8DiB"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def tokenize_text(batch):\n",
@@ -8412,7 +8466,7 @@
       "metadata": {
         "id": "46FWi3OMTqwf"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8463,7 +8517,7 @@
         "id": "-hRKOAcETqtW",
         "outputId": "c39e0413-e892-41fd-cdd5-608bf95a5e61"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8521,7 +8575,7 @@
         "id": "f-_wJjyUTqqm",
         "outputId": "26ffe1c2-ba1d-42b5-d98f-edaafeb54375"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8546,7 +8600,7 @@
       "metadata": {
         "id": "JVyXJD8fTqnY"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8557,7 +8611,7 @@
       "metadata": {
         "id": "-Px4FhUJTqkU"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8572,7 +8626,7 @@
         "id": "RUgIcwXjTqhG",
         "outputId": "cfb10435-c58b-4fe1-88da-60acc46e9bcd"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8605,7 +8659,7 @@
       "metadata": {
         "id": "o0oGAyjGVDZe"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8641,7 +8695,7 @@
         "id": "eNxKPDbPVDWH",
         "outputId": "47bc6b36-4e9f-40a1-af6c-9a6398bd1f99"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8683,7 +8737,7 @@
         "id": "TICWoA0WVicv",
         "outputId": "db4c6c5e-5cd8-4feb-f92b-8981c2a46f55"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8721,7 +8775,7 @@
       "metadata": {
         "id": "8IxFRnQ8VDSz"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8736,7 +8790,7 @@
         "id": "NdhL31hlVDQG",
         "outputId": "351eaea9-c5f8-40ca-ff8d-957f7d80b0c1"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8795,7 +8849,7 @@
       "metadata": {
         "id": "o79D5mtjVDNX"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8810,7 +8864,7 @@
         "id": "0H9NVPesWDGQ",
         "outputId": "6dc4e9a1-1b51-4d7f-e5fa-168b3b4fe33d"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8986,7 +9040,7 @@
       "metadata": {
         "id": "WmQrZ4dpVDKn"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9006,7 +9060,7 @@
       "metadata": {
         "id": "J8LhoRYmVDHg"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9029,7 +9083,7 @@
         "id": "yjiltksxVDEz",
         "outputId": "53a1ce5f-7ff0-4c0e-ec23-80f9cbe30a59"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9128,7 +9182,7 @@
         "id": "n2L9ygMbVDB_",
         "outputId": "a68691b1-77b2-4939-94e0-6763795342b6"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9277,7 +9331,7 @@
         "id": "W_8NYTYxVC_e",
         "outputId": "10479128-71d9-42de-f395-108652700b69"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9364,7 +9418,7 @@
         "id": "VgVxJk-xVC8a",
         "outputId": "f6e0abe7-0b92-4ed4-93e9-b083d351b3f1"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9451,7 +9505,7 @@
         "id": "8BDmYkooVC5n",
         "outputId": "f8e61b80-92c9-4345-f06e-e8971f7afdbd"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9518,7 +9572,7 @@
       "metadata": {
         "id": "BIUJX0NtVC26"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     }
   ]
